# backend/campaign/views.py
@@ -1,5 +1,5 @@
-from campaign.models import Campaign
-from campaign.serializers import CampaignSerializer
+from campaign.models import Campaign, CampaignRound
+from campaign.serializers import CampaignSerializer, CampaignRoundSerializer
 from lib.created_by_current_user_helper import CreatedByModelViewSet
 
 
@@ -8,3 +8,10 @@ from lib.created_by_current_user_helper import CreatedByModelViewSet
 class CampaignViewSet(CreatedByModelViewSet):
     queryset = Campaign.objects.all()
     serializer_class = CampaignSerializer
+
+
+class CampaignRoundViewSet(CreatedByModelViewSet):
+    serializer_class = CampaignRoundSerializer
+
+    def get_queryset(self):
+        return CampaignRound.objects.filter(campaign_id=self.kwargs['campaign_id'])
